...
              ? null
              : BlocBuilder<TodoFileCubit, TodoFileState>(
                  builder: (BuildContext context, TodoFileState state) {
                    return FloatingActionButton.extended(
                      heroTag: 'localUsage',
                      icon: const Icon(Icons.done),
                      label: const Text('Apply'),
                      tooltip: 'Apply',
                      onPressed: () async {
                        try {
                          setState(() => loading = true);
                          await context.read<LoginCubit>().loginLocal(
                            localTodoFilePath: state.localTodoFilePath,
...
      leading: const Icon(Icons.dns),
      title: TextFormField(
        controller: textFieldController,
        style: Theme.of(context).textTheme.bodyMedium,
        textCapitalization: TextCapitalization.none,
        decoration: const InputDecoration(
          labelText: 'Server',
          hintText: 'http[s]://server[:port]',
        ),
        validator: (String? value) {
          if (value == null || value.isEmpty) {
            return 'Missing server address';
          }
...
      leading: const Icon(Icons.http),
      title: TextFormField(
        controller: textFieldController,
        style: Theme.of(context).textTheme.bodyMedium,
        textCapitalization: TextCapitalization.none,
        decoration: const InputDecoration(
          labelText: 'Path',
          hintText: '/remote.php/dav/files/<username>',
        ),
        validator: (String? value) {
          if (value == null || value.isEmpty) {
            return 'Missing path';
          }
...
      leading: const Icon(Icons.person),
      title: TextFormField(
        controller: textFieldController,
        style: Theme.of(context).textTheme.bodyMedium,
        textCapitalization: TextCapitalization.none,
        decoration: const InputDecoration(
          labelText: 'Username',
          hintText: 'Username',
        ),
        validator: (String? value) {
          if (value == null || value.isEmpty) {
            return 'Missing username';
          }
...
      leading: const Icon(Icons.password),
      title: TextFormField(
        controller: textFieldController,
        style: Theme.of(context).textTheme.bodyMedium,
        textCapitalization: TextCapitalization.none,
        decoration: const InputDecoration(
          labelText: 'Password',
          hintText: 'Password',
        ),
        obscureText: !showPassword,
        validator: (String? value) {
          if (value == null || value.isEmpty) {
            return 'Missing password';
...
