...
          : null,
      // leading: narrowView && Scaffold.of(context).hasDrawer
      leading: Scaffold.of(context).hasDrawer
          ? Builder(
              builder: (BuildContext context) {
                return IconButton(
                  tooltip: 'Open drawer',
                  icon: const Icon(Icons.menu),
                  onPressed: () async {
                    await showModalBottomSheet(
                      context: context,
                      isScrollControlled: true,
                      builder: (BuildContext context) =>
...
